--- a/resources/js/components/sections/Forms.css
+++ b/resources/js/components/sections/Forms.css
@@ -1,25 +1,16 @@
-input,
-textarea {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0 !important;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
 .c-input {
-  width: 100%;
-  height: 52px;
-  border: none;
-  outline: none;
-  background: #eff4f6;
-  padding-left: 25px;
-  border-left: solid 2px transparent;
+    width: 100%;
+    height: 52px;
+    border: none;
+    outline: none;
+    background: #eff4f6;
+    padding-left: 25px;
+    border-left: solid 8px transparent;
 }
 .c-input:focus,
 .c-input:hover {
-  border-left: solid 2px #ff0000;
+    border-left: solid 8px #b30000;
 }
 .c-textarea {
-  height: 190px;
+    height: 190px;
 }
